--- a/common/src/main/resources/application-dev.yml
+++ b/common/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
         password: ghost666
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: com.mysql.cj.jdbc.Driver
         maxActive: 20
         initialSize: 1
         maxWait: 60000
