--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -7,6 +7,6 @@ server:
   tomcat:
       max-http-post-size: -1
 
-#mybatis:
-#  mapper-locations: classpath:mapping/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
-#  type-aliases-package: cn.pcshao.grant.common.entity  # 注意：对应实体类的路径
+mybatis:
+  mapper-locations: classpath:mybatis/mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
+  type-aliases-package: cn.pcshao.grant.common.entity  # 注意：对应实体类的路径
