--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -1,16 +1,8 @@
-#port
+#spring.profiles.active=dev
+
 server.port=8080
-
-#log
-#logging.level.org.springframework.web=DEBUG
-#logging.file=log.log
-
-#Thymeleaf
-spring.thymeleaf.cache=false
-spring.thymeleaf.mode=LEGACYHTML5
-
-#热部署配置
-#spring.devtools.restart.additional-paths=src/main/java
 
 #关闭默认favicon
 #spring.mvc.favicon.enabled = false
+
+spring.datasource.url=jdbc:mysql://pcshao.cn:9910/a66bbs?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
