add shiro framework and update slf4j.

--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   profiles:
     active: dev
 
-server:
-  port: 8080
-  tomcat:
-      max-http-post-size: -1
+#server:
+#  port: 8080
+#  tomcat:
+#      max-http-post-size: -1
 
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
