--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -3,6 +3,5 @@
 server.port=8080
 
 #关闭默认favicon
-#spring.mvc.favicon.enabled = false
+spring.mvc.favicon.enabled = false
 
-spring.datasource.url=jdbc:mysql://pcshao.cn:9910/a66bbs?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
