update role and permission manager by Shiro framework.

--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -1,7 +1,9 @@
 #spring.profiles.active=dev
 
-server.port=8080
+server.port=80
 
 #关闭默认favicon
 spring.mvc.favicon.enabled = false
+
+mybatis.type-aliases-package=cn.pcshao.grant.common.entity
 
