--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -78,6 +78,23 @@
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger-annotations}</version>
             </dependency>
+            <!-- Shiro -->
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-web</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+            <!-- pageHelper -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper</artifactId>
+                <version>4.1.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
