--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -1,7 +1,15 @@
 #spring.profiles.active=dev
 
-server.port=8080
+server.port =8080
 
 #¹Ø±ÕÄ¬ÈÏfavicon
-spring.mvc.favicon.enabled = false
+spring.mvc.favicon.enabled =false
+
+
+file.service.address =172.16.31.128
+file.service.port =21
+file.service.username =root
+file.service.password =123456
+file.service.path =/files
+file.service.alertDiskSize =1024000
 
