--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -96,6 +96,13 @@
                 <artifactId>pagehelper</artifactId>
                 <version>4.1.6</version>
             </dependency>
+            <!-- 加入上传文件组件 -->
+            <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
+            <dependency>
+                <groupId>commons-net</groupId>
+                <artifactId>commons-net</artifactId>
+                <version>3.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
