--- a/gra_business/pom.xml
+++ b/gra_business/pom.xml
@@ -24,6 +24,13 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 引入相册模块 -->
+        <dependency>
+            <groupId>cn.pcshao.pic</groupId>
+            <artifactId>album</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- SpringBoot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
