update localPath and update class AlbumSource and add log to FtpUtil.

--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -5,11 +5,17 @@
 #¹Ø±ÕÄ¬ÈÏfavicon
 spring.mvc.favicon.enabled =false
 
+#FTP server
+file.service.address=pcshao.cn
+file.service.port=21
+file.service.username=myftp
+file.service.password=thisisastrongftp1219
 
-file.service.address =172.16.31.128
-file.service.port =21
-file.service.username =root
-file.service.password =123456
+#file.service.address =172.16.31.128
+#file.service.port =21
+#file.service.username =root
+#file.service.password =123456
+
 file.service.path =/files
 file.service.alertDiskSize =1024000
 
