add fileDownload server config. it's nginx.

--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -5,6 +5,10 @@
 #¹Ø±ÕÄ¬ÈÏfavicon
 spring.mvc.favicon.enabled =false
 
+#FileServer Nginx
+file.download.url=http://pcshao.cn
+file.download.port=8081
+
 #FTP server
 file.service.address=pcshao.cn
 file.service.port=21
