add autoClearFtp task and change delete way with set name 'TO_DELETE'.

--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -23,3 +23,9 @@ file.service.password=thisisastrongftp1219
 file.service.path =/files
 file.service.alertDiskSize =1024000
 
+# 秒 分 时 日 月 周 年 n/m n开始 m隔
+task.autoclearftp.path=/
+task.autoclearftp.cron=0 0/1 * * * *
+
+task.autoclearftp.pic=ON
+#task.autoclearftp.pic=FALSE
