--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -25,6 +25,7 @@ file.service.alertDiskSize =1024000
 
 # 秒 分 时 日 月 周 年 n/m n开始 m隔
 task.autoclearftp.path=/
+#task.autoclearftp.cron=0/10 * * * * *
 task.autoclearftp.cron=0 0/1 * * * *
 
 task.autoclearftp.pic=ON
