update mail service and set properties encode to utf-8.

--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -1,8 +1,8 @@
-#spring.profiles.active=dev
+ï»¿#spring.profiles.active=dev
 
 #server.port =80
 
-#¹Ø±ÕÄ¬ÈÏfavicon
+#å…³é—­é»˜è®¤favicon
 spring.mvc.favicon.enabled =false
 
 #FileServer Nginx
@@ -24,9 +24,9 @@ file.service.path =/files
 file.service.alertDiskSize =1024000
 
 task.autoclearftp.path=/
-# Ãë ·Ö Ê± ÈÕ ÔÂ ÖÜ Äê n/m n¿ªÊ¼ m¸ô
+# ç§’ åˆ† æ—¶ æ—¥ æœˆ å‘¨ å¹´ n/m nå¼€å§‹ méš”
 #task.autoclearftp.cron=0/10 * * * * *
 task.autoclearftp.cron=0 0/1 * * * *
 
-task.autoclearftp.pic=ON
-#task.autoclearftp.pic=FALSE
+#task.autoclearftp.pic=ON
+task.autoclearftp.pic=FALSE
