add AlbumSystemMonitor function.

--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -19,14 +19,12 @@ file.service.password=thisisastrongftp1219
 #file.service.port =21
 #file.service.username =root
 #file.service.password =123456
-
 file.service.path =/files
 file.service.alertDiskSize =1024000
 
 task.autoclearftp.path=/
 # 秒 分 时 日 月 周 年 n/m n开始 m隔
 #task.autoclearftp.cron=0/10 * * * * *
-task.autoclearftp.cron=0 0/1 * * * *
-
-#task.autoclearftp.pic=ON
-task.autoclearftp.pic=FALSE
+task.autoclearftp.cron=0 0/5 * * * *
+task.autoclearftp.pic=ON
+#task.autoclearftp.pic=FALSE
