--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -9,10 +9,9 @@
     password: shao163very
     default-encoding: UTF-8
 
-#server:
-#  port: 8080
-#  tomcat:
-#      max-http-post-size: -1
+  mvc:
+    favicon:
+      enabled: false
 
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
