--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -1,9 +1,5 @@
-#spring.profiles.active=dev
-
+server.address=0.0.0.0
 server.port=80
-
-#关闭默认favicon
-spring.mvc.favicon.enabled = false
-
-mybatis.type-aliases-package=cn.pcshao.grant.common.entity
+server.servlet.path=/
+server.servlet.context-path=/
 
