--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -3,3 +3,8 @@ server.port=80
 server.servlet.path=/
 server.servlet.context-path=/
 
+#模板引擎thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.charset=utf-8
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.content-type=text/html
