--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -73,6 +73,12 @@
                 <artifactId>shiro-spring</artifactId>
                 <version>1.3.2</version>
             </dependency>
+            <!-- Shiro ehcache -->
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-ehcache</artifactId>
+                <version>1.3.2</version>
+            </dependency>
             <!-- 加入上传文件组件 -->
             <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
             <dependency>
