--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 ﻿spring:
   profiles:
     active: dev
+  application:
+    name: GrantCommon
 
   #邮箱服务器地址
   mail:
@@ -16,4 +18,9 @@
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
   type-aliases-package: cn.pcshao.grant.common.entity  # 注意：对应实体类的路径
+
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
 
