add jxl support and update pom and create ExcelUtil.

--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -8,3 +8,13 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.charset=utf-8
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.content-type=text/html
+
+#用户列表批量上传excel模板地址
+importUsersTemplate.url=http://pcshao.cn:8081/excel/importUsersTemplate.xls
+importUsersTemplate.username=username
+importUsersTemplate.email=email
+importUsersTemplate.nickname=nickname
+importUsersTemplate.password=password
+importUsersTemplate.sex=sex
+importUsersTemplate.tel=tel
+importUsersTemplate.is_use=is_use
