--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -98,6 +98,12 @@
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger-annotations}</version>
             </dependency>
+            <!-- JXL -->
+            <dependency>
+                <groupId>net.sourceforge.jexcelapi</groupId>
+                <artifactId>jxl</artifactId>
+                <version>2.6.12</version>
+            </dependency>
 
             <!-- 接口文档化 -->
             <dependency>
