add insertBatch files and changed return new error to throw new CustomException.

--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -18,3 +18,11 @@ importUsersTemplate.password=password
 importUsersTemplate.sex=sex
 importUsersTemplate.tel=tel
 importUsersTemplate.is_use=is_use
+
+#huser列表批量上传excel模板地址
+importHUsersTemplate.url=http://pcshao.cn:8081/excel/importHUsersTemplate.xls
+importHUsersTemplate.idCard=idCard
+importHUsersTemplate.name=name
+importHUsersTemplate.sex=sex
+importHUsersTemplate.email=email
+importHUsersTemplate.telephone=telephone
