--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -26,3 +26,9 @@ importHUsersTemplate.name=name
 importHUsersTemplate.sex=sex
 importHUsersTemplate.email=email
 importHUsersTemplate.telephone=telephone
+
+#HUser分析配置
+# 秒 分 时 日 月 周 年 n/m n开始 m隔
+task.AnalysisHUser.readCron=0/10 * * * * *
+task.AnalysisHUser.consumeCron=0/5 * * * * *
+task.AnalysisHUser.switch=ON
