add redis support with mybatis cache.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,6 +44,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- redis -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot}</version>
+            </dependency>
             <!-- mybatis -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
