--- a/common/pom.xml
+++ b/common/pom.xml
@@ -99,6 +99,11 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
 
 
