update and remove some properties file and add importHUserTemplate.xls.

--- a/album/src/main/resources/album.properties
+++ b/album/src/main/resources/album.properties
@@ -1,11 +1,4 @@
-﻿#spring.profiles.active=dev
-
-#server.port =80
-
-#关闭默认favicon
-spring.mvc.favicon.enabled =false
-
-#FileServer Nginx
+﻿#FileServer Nginx
 file.download.url=http://pcshao.cn
 file.download.port=8081
 
@@ -19,9 +12,11 @@ file.service.password=thisisastrongftp1219
 #file.service.port =21
 #file.service.username =root
 #file.service.password =123456
+
 file.service.path =/files
 file.service.alertDiskSize =1024000
 
+#定时自动清理任务
 task.autoclearftp.path=/
 # 秒 分 时 日 月 周 年 n/m n开始 m隔
 #task.autoclearftp.cron=0/10 * * * * *
