--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -110,6 +110,12 @@
                 <artifactId>jxl</artifactId>
                 <version>2.6.12</version>
             </dependency>
+            <!-- Hadoop -->
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-core</artifactId>
+                <version>1.0.4</version>
+            </dependency>
 
             <!-- 接口文档化 -->
             <dependency>
