--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,11 +18,11 @@
 
     <dependencies>
         <!-- springCloud注测中心客户端 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>RELEASE</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-eureka</artifactId>-->
+            <!--<version>RELEASE</version>-->
+        <!--</dependency>-->
         <!-- SpringBoot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
