--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -31,5 +31,8 @@ importHUsersTemplate.telephone=telephone
 # 秒 分 时 日 月 周 年 n/m n开始 m隔
 task.AnalysisHUser.readCron=0/1 * * * * *
 task.AnalysisHUser.consumeCron=0/5 * * * * *
+# 总开关
 #task.AnalysisHUser.switch=ON
 task.AnalysisHUser.switch=OFF
+# 是否使用Hadoop计算，否则使用Mysql
+task.AnalysisHUser.useHadoop=OFF
