add Mysql2HdfsTask and set properties file.

--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -36,3 +36,8 @@ task.AnalysisHUser.consumeCron=0/5 * * * * *
 task.AnalysisHUser.switch=OFF
 # 是否使用Hadoop计算，否则使用Mysql
 task.AnalysisHUser.useHadoop=OFF
+
+#Mysql2Hdfs配置
+task.Mysql2Hdfs.switch=ON
+task.Mysql2Hdfs.cron=0/5 * * * * *
+
