--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -38,6 +38,7 @@ task.AnalysisHUser.switch=OFF
 task.AnalysisHUser.useHadoop=OFF
 
 #Mysql2Hdfs配置
-task.Mysql2Hdfs.switch=ON
+#task.Mysql2Hdfs.switch=ON
+task.Mysql2Hdfs.switch=OFF
 task.Mysql2Hdfs.cron=0/5 * * * * *
 
