update m2h with perSynCount each.

--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -40,6 +40,7 @@ task.AnalysisHUser.useHadoop=OFF
 #Mysql2Hdfs配置
 task.Mysql2Hdfs.hadoopURI=hdfs://192.168.2.100:9000
 task.Mysql2Hdfs.hdfsLocate=/input/test/
+task.Mysql2Hdfs.perSynCount=10
 task.Mysql2Hdfs.switch=ON
 #task.Mysql2Hdfs.switch=OFF
 task.Mysql2Hdfs.cron=0/5 * * * * *
