--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -26,16 +26,18 @@ importHUsersTemplate.name=name
 importHUsersTemplate.sex=sex
 importHUsersTemplate.email=email
 importHUsersTemplate.telephone=telephone
+importHUsersTemplate.address=address
 
 #HUser分析配置
 # 秒 分 时 日 月 周 年 n/m n开始 m隔
 task.AnalysisHUser.readCron=0/1 * * * * *
 task.AnalysisHUser.consumeCron=0/5 * * * * *
 # 总开关
-#task.AnalysisHUser.switch=ON
-task.AnalysisHUser.switch=OFF
+task.AnalysisHUser.switch=ON
+#task.AnalysisHUser.switch=OFF
 # 是否使用Hadoop计算，否则使用Mysql
-task.AnalysisHUser.useHadoop=OFF
+task.AnalysisHUser.useHadoop=ON
+#task.AnalysisHUser.useHadoop=OFF
 
 #Mysql2Hdfs配置
 task.Mysql2Hdfs.hadoopURI=hdfs://192.168.2.100:9000
