--- a/album/pom.xml
+++ b/album/pom.xml
@@ -7,6 +7,7 @@
     <groupId>cn.pcshao.pic</groupId>
     <artifactId>album</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>cn.pcshao.grant</groupId>
