--- a/gra_business/pom.xml
+++ b/gra_business/pom.xml
@@ -31,6 +31,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 引入WebSocket -->
+        <dependency>
+            <groupId>cn.pcshao.grant</groupId>
+            <artifactId>websocket</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--生成文档-->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -73,12 +79,6 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
-        </dependency>
-        <!-- WebSocket -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-websocket</artifactId>
-            <version>4.3.10.RELEASE</version>
         </dependency>
     </dependencies>
 
