--- a/gra_business/pom.xml
+++ b/gra_business/pom.xml
@@ -6,13 +6,13 @@
 
     <groupId>cn.pcshao.graduaction</groupId>
     <artifactId>gra_business</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>cn.pcshao.grant</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
@@ -21,21 +21,21 @@
         <dependency>
             <groupId>cn.pcshao.grant</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- 引入相册模块 -->
         <dependency>
             <groupId>cn.pcshao.pic</groupId>
             <artifactId>album</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- 引入WebSocket -->
         <dependency>
             <groupId>cn.pcshao.grant</groupId>
             <artifactId>websocket</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <!--生成文档-->
         <dependency>
@@ -82,26 +82,15 @@
         </dependency>
     </dependencies>
 
-    <!--spring boot打包的话需要指定一个唯一的入门-->
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-                <!--<version>2.0.1.RELEASE</version>-->
-                <!--<configuration>-->
-                    <!--&lt;!&ndash; 指定该Main Class为全局的唯一入口 &ndash;&gt;-->
-                    <!--<mainClass>cn.pcshao.graduaction.BusinessApplication</mainClass>-->
-                    <!--<layout>ZIP</layout>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>repackage</goal>&lt;!&ndash;可以把依赖的包都打包到生成的Jar包中&ndash;&gt;-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
