--- a/websocket/pom.xml
+++ b/websocket/pom.xml
@@ -5,28 +5,22 @@
 
     <groupId>cn.pcshao.grant</groupId>
     <artifactId>websocket</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
-    <name>websocket</name>
-    <description>Demo project for Spring Boot</description>
 
     <parent>
         <groupId>cn.pcshao.grant</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <!-- 引入最伟大的cn.pcshao.grant.common包 -->
         <dependency>
             <groupId>cn.pcshao.grant</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- WebSocket -->
@@ -54,4 +48,15 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
