RECOVER MODE complete.

--- a/gra_business/src/main/resources/business.properties
+++ b/gra_business/src/main/resources/business.properties
@@ -43,9 +43,10 @@ task.AnalysisHUser.useHadoop=ON
 task.Mysql2Hdfs.hadoopURI=hdfs://192.168.2.100:9000
 task.Mysql2Hdfs.hdfsLocate=/input/test/
 task.Mysql2Hdfs.perSynCount=100
-task.Mysql2Hdfs.switch=ON
+#task.Mysql2Hdfs.switch=ON
 #task.Mysql2Hdfs.switch=OFF
-#task.Mysql2Hdfs.switch=RECOVER
+task.Mysql2Hdfs.switch=RECOVER
 task.Mysql2Hdfs.cron=0/5 * * * * *
 task.Mysql2Hdfs.tempFilePath=E:/temp_01011_pcshao
+task.Mysql2Hdfs.recoverFilePath=E:/RECOVER_MODE_DATA/
 
